--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ exportMethods(createMSIDatamatrix)
 exportMethods(create_cal_curve)
 exportMethods(int2conc)
 exportMethods(int2response)
+exportMethods(read_mrm)
 exportMethods(remove_blank_mzs)
 exportMethods(summarise_cal_levels)
 exportMethods(zero2na)
