--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(calibrationInfo)
 export(quant_MSImagingExperiment)
+export(read_mrm)
 export(tissueInfo)
 exportClasses(calibrationInfo)
 exportClasses(quant_MSImagingExperiment)
@@ -10,7 +11,6 @@ exportMethods(createMSIDatamatrix)
 exportMethods(create_cal_curve)
 exportMethods(int2conc)
 exportMethods(int2response)
-exportMethods(read_mrm)
 exportMethods(remove_blank_mzs)
 exportMethods(summarise_cal_levels)
 exportMethods(zero2na)
