--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ exportMethods(create_cal_curve)
 exportMethods(int2conc)
 exportMethods(int2response)
 exportMethods(remove_blank_mzs)
+exportMethods(setCommonAxis)
 exportMethods(summarise_cal_levels)
 exportMethods(zero2na)
 import(Cardinal)
