--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,10 @@ Collate:
     'createMSIDatamatrix.R'
     'create_cal_curve.R'
     'extdata.R'
+    'imageR.R'
     'int2conc.R'
     'int2response.R'
+    'int2snr.R'
     'read_mrm.R'
     'remove_blank_mzs.R'
     'setCommonAxis.R'
