--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,10 @@ exportClasses(quant_MSImagingExperiment)
 exportClasses(tissueInfo)
 exportMethods(createMSIDatamatrix)
 exportMethods(create_cal_curve)
+exportMethods(imageR)
 exportMethods(int2conc)
 exportMethods(int2response)
+exportMethods(int2snr)
 exportMethods(remove_blank_mzs)
 exportMethods(setCommonAxis)
 exportMethods(summarise_cal_levels)
