--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: quantMSImageR
 Title: Quantification of mass spectrometry imaging dat
 Version: 0.0.1.0
 Authors@R: 
-    person("Matthew", "Smith", , "matthew.smith@ki.se", role = c("aut", "cre"),
+    person("Matthew", "Smith", , "mattyjsmith123@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7357-2670"))
-Depends: Cardinal, dplyr, chemCal
+Depends: Cardinal, dplyr, chemCal, viridis
 Suggests: testthat
 Description: Software tools (largely extended from the R package Cardinal) for quantification of mass spectrometry imaging (MSI) data.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
@@ -17,6 +17,7 @@ Collate:
     'createMSIDatamatrix.R'
     'create_cal_curve.R'
     'extdata.R'
+    'ggplot_themes.R'
     'imageR.R'
     'int2conc.R'
     'int2response.R'
