--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(tissueInfo)
 exportClasses(calibrationInfo)
 exportClasses(quant_MSImagingExperiment)
 exportClasses(tissueInfo)
+exportMethods(combine_MSIs)
 exportMethods(createMSIDatamatrix)
 exportMethods(create_cal_curve)
 exportMethods(imageR)
@@ -20,3 +21,7 @@ exportMethods(zero2na)
 import(Cardinal)
 import(chemCal)
 import(dplyr)
+import(ggplot2)
+import(ggthemes)
+import(tibble)
+import(viridis)
