--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,9 +13,11 @@ Depends:
 	ggplot2 (>= 3.5.1),
 	ggthemes (>= 5.1.0),
 	scales (>= 1.3.0),
-	tibble (>= 3.2.1)
+	tibble (>= 3.2.1),
+	tidyr (>= 1.3.1),
+	DT (>= 0.33)
 VignetteBuilder: knitr
-Suggests: testthat
+Suggests: testthat, ggpmisc
 Description: Software tools (largely extended from the R package Cardinal) for quantification of mass spectrometry imaging (MSI) data.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
