--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Depends:
 	tidyr (>= 1.3.1),
 	DT (>= 0.33)
 VignetteBuilder: knitr
-Suggests: testthat, ggpmisc
+Suggests: testthat
 Description: Software tools (largely extended from the R package Cardinal) for quantification of mass spectrometry imaging (MSI) data.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
