fix extract coords

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(calibrationInfo)
 export(createClassAndColors)
+export(extract_HnE_coords)
+export(extract_desi_coords)
 export(quant_MSImagingExperiment)
 export(read_mrm)
 export(scale_colour_Publication)
@@ -23,9 +25,11 @@ exportMethods(setCommonAxis)
 exportMethods(summarise_cal_levels)
 exportMethods(zero2na)
 import(Cardinal)
+import(XML)
 import(chemCal)
 import(dplyr)
 import(ggplot2)
 import(ggthemes)
+import(reticulate)
 import(tibble)
 import(viridis)
